<resources>
    <string name="app_name">FastShop</string>
    <string name="InternetProblem">You have not connection to Internet</string>
    <string name="attention">Attention!</string>
    <string name="Ok">OK</string>
    <string name="greeting">Getting Started</string>
    <string name="mainscreen">Main Screen</string>
    <string name="search">Search</string>
    <string name="myactivity">My Activity</string>
    <string name="myprofile">My Profile</string>
    <string name="logtext">Make your way to our shop!</string>
    <string name="reqacc">You should login to access this section.</string>
    <string name="Allcategories">All categories</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="Electronics">Electronics</string>
    <string name="jewelery">Jewelery</string>
    <string name="mencat">Mens clothing</string>
    <string name="womencat">Womens clothing</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="personal">Personal</string>
    <string name="company">Company</string>
    <string name="errorEmpty">Fill the gaps</string>
    <string name="passerror">Passwords do not match.</string>
    <string name="catError">Choose the type of account</string>
    <string name="numberError">Number form is wrong. It should start with +. (For example +00)</string>
    <string name="welcome">Welcome!</string>
    <string name="accSuccess">Account has been made successfully!</string>
    <string name="wait">Please wait</string>
    <string name="smallpass">Password is too short! (At least password should contain 6 symbols)</string>
    <string name="nickprob">Nickname is too long! (Maximum 35 symbols)</string>
    <string name="sendEmail">Send Reset Link</string>
    <string name="resetInfo">Enter your email address which you have registered. After that our team will send special link for reseting your password.</string>
    <string name="resetInfo2">Special email has been sent to your address. Please do not share with anybody! If you can not find email look at spam box in mail.</string>
    <string name="exit">Exit</string>
    <string name="logout">Log out</string>
    <string name="sup">Support</string>
    <string name="loginfo">Are you sure to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="suc">Successfully exited.</string>
    <string name="sucCom">Successfully published.</string>
    <string name="forBussines">Special section for company</string>
    <string name="addFood">Add Food</string>
    <string name="showMyRestaurant">Show my restaurant</string>
    <string name="inProgress">This section is on progress</string>
    <string name="error">Something went wrong. Try again.</string>
    <string name="editProf">Edit profile</string>
    <string name="save">Save</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="longname">Nickname is too long! (Maximum 35 symbols)</string>
    <string name="respass">Restore password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asap">This feature will open asap</string>
    <string name="update">Update</string>
    <string name="number">Number</string>
    <string name="goBackAttention">Are you sure to go back?</string>
    <string name="perDenied">We have not permission for selecting photo!</string>
    <string name="givePer">Give permission</string>
    <string name="perDeniedMsg">Permission denied.</string>
    <string name="updateAttention">Are you sure to update?</string>
    <string name="choosewhatdo">Choose what to do</string>
    <string name="selectImage">Select image</string>
    <string name="deleteImage">Delete image</string>
    <string name="sucUpdate">Informations successfully updated</string>
    <string name="Favorites">Favorites</string>
    <string name="NothingToShow">Search something!</string>
    <string name="Nothingfound">Nothing found :(</string>
    <string name="Comments">Comments</string>
    <string name="Send">Send</string>
    <string name="perItem">Login to observe item</string>
    <string name="publishMsg">In our terms,we do not allow to delete comments after publishing. Are you sure to publish your comment?</string>
    <string name="deletesure">Are you sure to delete this item from favorites?</string>
    <string name="refreshInfo">Refresh the page</string>
    <string name="deleting">Deleting...</string>
    <string name="sucDel">Successfully deleted</string>
    <string name="infoCart">Cart updated.</string>
    <string name="emptyCart">Your cart is empty</string>
    <string name="deletesurecart">Are you sure to delete this item from cart?</string>



</resources>