<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.fragment.ScreenFragment">
      <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

          <com.google.android.material.tabs.TabLayout
              android:id="@+id/tabLayout"
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:background="#400C56"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:tabIndicatorColor="#FFAB4C"
              app:tabSelectedTextColor="#FFAB4C"
              app:tabTextColor="@color/white">

              <com.google.android.material.tabs.TabItem
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/Allcategories">

              </com.google.android.material.tabs.TabItem>

              <com.google.android.material.tabs.TabItem
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/men">

              </com.google.android.material.tabs.TabItem>

              <com.google.android.material.tabs.TabItem
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/women">

              </com.google.android.material.tabs.TabItem>

          </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/viewPager2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>