<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.fragment.MyProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#400C56"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
<androidx.cardview.widget.CardView
    android:id="@+id/myProfileImage"
    android:layout_width="125dp"
    app:cardCornerRadius="100dp"
    android:layout_height="125dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:id="@+id/myProfileImageView"
        android:layout_width="match_parent"
        android:src="@drawable/circlelogo"
        android:layout_height="match_parent"></ImageView>

</androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/myProfileNickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="8dp"
                android:text="@string/nickname"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/myProfileImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:id="@+id/goBackMyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/goback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar4"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#B000B9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/linearSettings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:id="@+id/editProfile"
                        android:text="@string/editProf"
                        android:textColor="@color/white"
                        android:background="@drawable/border"
                        android:textSize="30dp">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"

                        android:id="@+id/myActivity"
                        android:text="@string/myactivity"
                        android:textColor="@color/white"
                        android:background="@drawable/border"
                        android:textSize="30dp">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:id="@+id/support"
                        android:text="@string/sup"
                        android:textColor="@color/white"
                        android:background="@drawable/border"
                        android:textSize="30dp">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:id="@+id/restorePass"
                        android:text="@string/respass"
                        android:textColor="@color/white"
                        android:background="@drawable/border"
                        android:textSize="30dp">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:id="@+id/logOut"
                        android:text="@string/logout"
                        android:textColor="@color/white"
                        android:background="@drawable/border"
                        android:textSize="30dp">

                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/exit"
                        android:id="@+id/exit"
                        android:textColor="@color/white"
                        android:background="@drawable/border"
                        android:textSize="30dp">

                    </TextView>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>



        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>