<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context=".view.fragment.account.RegisterFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:elevation="20dp"
        android:text="@string/register"
        android:textColor="#FFAB4C"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="10dp"
        android:background="#400C56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/goBackReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/goback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/orangetext"
            android:elevation="10dp"
            android:ems="10"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:gravity="center"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:padding="10dp"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="263dp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/orangetext"
            android:elevation="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="334dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/orangetext"
            android:elevation="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="413dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/register"
        android:textSize="14dp"
        android:textStyle="bold"
        android:background="@drawable/purpletext"
        android:elevation="10dp"
        android:textColor="@color/white"
        android:padding="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>